@@ -2,7 +2,9 @@
 
 	* ../../examples/canvas/osm.tcl: Integrated code/patch contributed
 	  by <tomasz@tuxteam.de> to use the new map::geocode::nominatim
-	  package for the resolution of geographical names.
+	  package for the resolution of geographical names. Integrated
+	  patch contributed by same to use the new zoom fitting
+	  functionality of map::slippy (v 0.5).
 
 2012-02-23  Andreas Kupries  <andreask@activestate.com>
 
